// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`semanticSearch create should create and save new search 1`] = `
Object {
  "__v": 0,
  "creationDate": 1000,
  "documents": Array [
    Object {
      "sharedId": "doc1",
      "status": "pending",
    },
    Object {
      "sharedId": "doc2",
      "status": "pending",
    },
  ],
  "language": "en",
  "searchTerm": "Test term",
  "status": "pending",
}
`;

exports[`semanticSearch getSearch should fetch a search by id and its document entities with semantic search results 1`] = `
Object {
  "documents": Array [
    Object {
      "sharedId": "doc1",
      "status": "completed",
    },
    Object {
      "sharedId": "doc2",
      "status": "completed",
    },
  ],
  "language": "en",
  "results": Array [
    Object {
      "language": "en",
      "semanticSearch": Object {
        "results": Array [
          Object {
            "page": 1,
            "score": 0.5,
            "sentence": "stuff",
          },
          Object {
            "page": 2,
            "score": 0.2,
            "sentence": "this",
          },
        ],
        "sharedId": "doc1",
      },
      "sharedId": "doc1",
    },
    Object {
      "language": "en",
      "semanticSearch": Object {
        "results": Array [
          Object {
            "page": 1,
            "score": 0.8,
            "sentence": "that",
          },
          Object {
            "page": 2,
            "score": 0.1,
            "sentence": "what",
          },
        ],
        "sharedId": "doc2",
      },
      "sharedId": "doc2",
    },
  ],
  "searchTerm": "torture",
  "status": "completed",
}
`;

exports[`semanticSearch processDocument should save the results of the document sorted by score in descending order, and compute average score 1`] = `
Array [
  Object {
    "page": 2,
    "score": 0.6,
    "text": "page 2",
  },
  Object {
    "page": 1,
    "score": 0.2,
    "text": "page 1",
  },
]
`;

exports[`semanticSearch processSearchLimit should return the updated search and processed documents 1`] = `
Object {
  "processedDocuments": Array [
    "doc2",
    "doc3",
  ],
  "updatedSearch": Object {
    "_id": "5c8162522b4081771f080487",
    "documents": Array [
      Object {
        "sharedId": "doc1",
        "status": "completed",
      },
      Object {
        "sharedId": "doc2",
        "status": "completed",
      },
      Object {
        "sharedId": "doc3",
        "status": "completed",
      },
      Object {
        "sharedId": "doc4",
        "status": "completed",
      },
      Object {
        "sharedId": "doc5",
        "status": "pending",
      },
    ],
    "language": "en",
    "searchTerm": "injustice",
    "status": "inProgress",
  },
}
`;
